--- a/lanzamiento_proyectil/mainwindow.ui
+++ b/lanzamiento_proyectil/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1006</width>
-    <height>508</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -25,7 +31,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1006</width>
+     <width>800</width>
      <height>24</height>
     </rect>
    </property>
